--- a/package.json
+++ b/package.json
@@ -21,14 +21,22 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor-mlkit/barcode-scanning": "^7.0.0-next.1",
     "@capacitor/app": "6.0.1",
+    "@capacitor/camera": "^6.1.0",
     "@capacitor/core": "6.1.2",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
+    "@ionic/pwa-elements": "^3.3.0",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "html5-qrcode": "^2.3.8",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "three": "^0.170.0",
+    "three-orbitcontrols": "^2.110.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -45,6 +53,7 @@
     "@capacitor/cli": "6.1.2",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.169.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.0",
